--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "concurrently": "^6.2.0",
     "js-sha256": "^0.9.0",
+    "json-server": "^0.16.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -27,10 +29,15 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run client",
+    "start-with-mock": "./node_modules/.bin/concurrently \"npm run mock\" \"npm run client\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "node_modules/.bin/eslint ./src",
+    "lint:fix": "node_modules/.bin/eslint ./src --fix",
+    "client": "react-scripts start",
+    "mock": "node ./mock-api-server/mock-api.js"
   },
   "eslintConfig": {
     "extends": [
