configured mock routes in json server

--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ REACT_APP_SESSION_TIMEOUT_IN_SECONDS = 600
 REACT_APP_SESSION_TIMEOUT_WARNING_IN_SECONDS = 180
 #Common date format across the application
 REACT_APP_DATE_FORMAT = DD/MM/YYYY hh:mm a
+
+#REACT_APP_API_HOST = https://cdn-api.co-vin.in
+REACT_APP_API_HOST = http://localhost:3004
