--- a/package.json
+++ b/package.json
@@ -24,19 +24,19 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.3.0",
     "validator": "^13.6.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "npm run client",
-    "start-with-mock": "./node_modules/.bin/concurrently \"npm run mock\" \"npm run client\"",
+    "start-with-mock": "./node_modules/.bin/concurrently \"npm run mock\" \"npm run start-local\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "node_modules/.bin/eslint ./src",
     "lint:fix": "node_modules/.bin/eslint ./src --fix",
     "client": "react-scripts start",
+    "start-local": "set \"REACT_APP_API_HOST=http://localhost:3004\" && npm run client",
     "mock": "node ./mock-api-server/mock-api.js"
   },
   "eslintConfig": {
