--- a/package.json
+++ b/package.json
@@ -62,5 +62,5 @@
   "devDependencies": {
     "gh-pages": "^3.2.3"
   },
-  "homepage": "http://8hanman8.github.io/cowin-ui"
+  "homepage": "https://8hanman8.github.io/cowin-ui"
 }
